package com.desofs.project.user.model;

public enum Role {
    ADMIN,
    MANAGER,
    USER
}
